# tracea

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  entrypoint.sh  pyproject.toml
dashboard/: index.html  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css  router.tsx
dashboard/src/components/agents/: AgentBar.tsx
dashboard/src/components/charts/: CostTokenChart.tsx  InsightsCharts.tsx  MiniCharts.tsx  StatCards.tsx
dashboard/src/components/issues/: IssueDetailPanel.tsx
dashboard/src/components/layout/: AppShell.tsx  AuthErrorState.tsx  ConnectionErrorBanner.tsx  RcaBanner.tsx  Sidebar.tsx
dashboard/src/components/live/: AgentTree.tsx  InsightsPanel.tsx  LiveContext.tsx  ToolLog.tsx  ToolLogRow.tsx  format.ts
dashboard/src/components/settings/: AlertsHelpPanel.tsx  ApiKeyDisplay.tsx  RuleTemplates.tsx  RulesHelpPanel.tsx  YamlEditor.tsx
dashboard/src/components/ui/: badge.tsx  card.tsx  scroll-area.tsx  table.tsx  tabs.tsx
dashboard/src/hooks/: UserContext.tsx  useAuth.ts  usePolling.ts
dashboard/src/lib/: api.ts
dashboard/src/pages/: AgentsPage.tsx  DashboardPage.tsx  EventTimelinePage.tsx  IssuesPage.tsx  LivePage.tsx  SessionsPage.tsx  SettingsPage.tsx  TeamPage.tsx
scripts/: seed_dummy_data.py
sdk-python/: README.md  pyproject.toml
sdk-python/src/tracea/: __init__.py  api.py  cli.py  config.py  config_loader.py  events.py  log.py  session.py
sdk-python/src/tracea/buffer/: __init__.py  batch.py  disk.py
sdk-python/src/tracea/patch/: __init__.py  _utils.py  httpx.py
sdk-python/tests/: __init__.py  conftest.py  test_batch_buffer.py  test_cli.py  test_config.py  test_config_loader.py  test_disk_buffer.py  test_integration.py  test_log.py  test_patch.py  test_pys_integration.py  test_session.py  test_streaming.py
tests/: conftest.py  test_auth.py  test_detection.py  test_ingest_validation.py  test_seed_rules.py
tracea-mcp/: README.md  pyproject.toml
tracea-mcp/src/tracea_mcp/: __init__.py  __main__.py  events.py  server.py  session.py
tracea-mcp/src/tracea_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tracea-mcp/src/tracea_mcp/client/: __init__.py  tracea_api.py
tracea-mcp/src/tracea_mcp/tools/: __init__.py  base.py  bash.py  edit.py  glob.py  grepc.py  read.py  registry.py  write.py
tracea-mcp/src/tracea_mcp/transport/: __init__.py  stdio.py
tracea-mcp/tests/: __init__.py  test_tracea_mcp.py
tracea-plugins/: README.md
tracea-plugins/claude-code/: README.md  tracea-hook.sh
tracea-plugins/gemini/: README.md  tracea-hook.py
tracea-plugins/kimi/: README.md  tracea-hook.py
tracea-plugins/openclaw/: README.md  tracea-plugin.ts
tracea-plugins/opencode/: README.md  tracea-plugin.ts
tracea/server/: alerts.yaml  auth.py  db.py  main.py  models.py  settings.py
tracea/server/alerts/: __init__.py  backoff.py  dispatcher.py  formatters.py  models.py  router.py  watcher.py
tracea/server/detection/: __init__.py  conditions.py  engine.py  loader.py  models.py  watcher.py
tracea/server/detection/defaults/: detection_rules.yaml
tracea/server/migrations/: 001_initial.sql  002_add_sequence.sql  003_add_detection_columns.sql  004_add_rca_structured.sql  005_webhook_failures.sql  006_sessions_schema.sql  007_add_platform.sql  008_observagent_support.sql  009_add_user_id.sql  010_add_users_table.sql  011_add_api_keys_table.sql  011_add_settings_table.sql
tracea/server/rca/: __init__.py  backends.py  models.py  prompts.py  worker.py
tracea/server/routes/: agents.py  config.py  ingest.py  issues.py  observagent.py  sessions.py
tracea/server/static/: dashboard.js  index.html
website/: index.html
