[project]
name = "tracea-server"
version = "0.1.0"
description = "Self-hosted AI agent observability server"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115,<1.0",
    "aiosqlite>=0.20,<1.0",
    "uvicorn>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "watchfiles>=0.22,<1.0",
    "ruamel.yaml>=0.18,<1.0",
    "httpx>=0.27,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
