[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracea"
version = "0.1.0"
description = "Self-hosted AI agent observability SDK"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27,<1.0",
    "aiosqlite>=0.20,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21,<1.0",
    "pytest-httpserver>=1.0",
    "openai>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tracea"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: end-to-end tests that require a running tracea server subprocess",
]