[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracea"
version = "0.1.0"
description = "Self-hosted AI agent observability SDK"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Darshan Nere", email = "darshan.nere2@gmail.com" }]
requires-python = ">=3.9"
keywords = ["observability", "llm", "agents", "tracing", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "httpx>=0.27,<1.0",
    "aiosqlite>=0.20,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21,<1.0",
    "pytest-httpserver>=1.0",
    "openai>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tracea"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: end-to-end tests that require a running tracea server subprocess",
]